--- a/src/base/_typography.scss
+++ b/src/base/_typography.scss
@@ -27,6 +27,10 @@ p {
   text-align: justify;
 }
 
+.sy-text-mono {
+  font-family: $sy-font-family-mono;
+}
+
 .sy-text-start {
   text-align: left;
   text-align: start;
