--- a/src/variables.scss
+++ b/src/variables.scss
@@ -139,6 +139,7 @@ $sy-color: sy-generate-color-palette($sy-color-hue, $sy-color-modifier);
 // -----------------------------------------------------------------------------
 
 $sy-font-family:           'Roboto';
+$sy-font-family-mono:      'Roboto mono';
 $sy-fontscale:             1.200;
 $sy-fontscale-display:     1.200;
 $sy-base-fontsize:         1rem;
