--- a/src/base/_color.scss
+++ b/src/base/_color.scss
@@ -16,7 +16,10 @@
 // the required color as the element's color, therefore the text is getting
 // colorized.
 //
-// Markup: _colorForeground.html
+// Markup:
+// <p class="sy-text-blue-500">Blue text.</p>
+// <p class="sy-text-red-500">Red text.</p>
+// <p class="sy-text-gray-500">Gray text.</p>
 //
 // Style guide: 1.1.1
 
@@ -25,7 +28,10 @@
 // Background color classes are named as `.sy-{color}-{shade}` and just set the
 // required color as the element's background color.
 //
-// Markup: _colorBackground.html
+// Markup:
+// <p class="sy-blue-500 sy-text-white">Blue background.</p>
+// <p class="sy-red-500 sy-text-white">Red background.</p>
+// <p class="sy-gray-500 sy-text-white">Gray background.</p>
 //
 // Style guide: 1.1.2
 
