Removed source-informations from KSS, made Markup-section conditional

--- a/src/base/_color.scss
+++ b/src/base/_color.scss
@@ -39,6 +39,8 @@
 // 
 // These are the available colors:
 // 
+// Hidemarkup: true
+// 
 // Markup: _colorAvailableColors.html
 //
 // Style guide: 1.1.3
