--- a/src/base/_module.scss
+++ b/src/base/_module.scss
@@ -3,3 +3,10 @@
 @import "./layout";
 @import "./grid";
 @import "./media";
+
+// Base
+// 
+// In base are severall classes and components defined which are required by
+// other components.
+//
+// Style guide: 1
