--- a/src/variables.scss
+++ b/src/variables.scss
@@ -60,6 +60,8 @@ $sy-height: (
   5: ($sy-base-height * 3.00)
 ) !default;
 
+$sy-float-enabled: true;
+
 
 // -----------------------------------------------------------------------------
 //  grid: container, columns, gap
