Added documentation for base/typography

--- a/src/base/_layout.scss
+++ b/src/base/_layout.scss
@@ -3,6 +3,8 @@
 // Like Bootstrap Syndesi-UI uses standartized classes for layout propertys like
 // margin, padding and element sizes.
 // 
+// The code was adapted from the [Bootstrap project](https://getbootstrap.com/docs/4.1/utilities/spacing/).
+// 
 // The used directions are as follows:
 // 
 // - `t` for top
