--- a/src/base/_typography.scss
+++ b/src/base/_typography.scss
@@ -15,6 +15,11 @@
 // 
 // Style guide: 1.2
 
+@if $sy-include-google-font {
+  @import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i');
+  @import url('https://fonts.googleapis.com/css?family=Roboto+Mono:300,300i');
+}
+
 body {
   font-family: $sy-font-family;
   overflow-x: hidden;
