--- a/src/base/_typography.scss
+++ b/src/base/_typography.scss
@@ -60,7 +60,7 @@ p {
 // - `.sy-text-center`: Text is aligned to the center.
 // - `.sy-text-end`: Text is aligned to the right (default) or left (rtl).
 // - `.sy-text-justify`: Text fills all available space.
-// - `.sy-text-justify-all`: Like `.sy-text-justify-all`, but the last line is justified too.
+// - `.sy-text-justify-all`: Like `.sy-text-justify`, but the last line is justified too.
 // - `.sy-text-match-parent`: Matches the alignment of its parent.
 // - `.sy-rtl`: Text flows from right to left.
 // - `.sy-ltr`: Text flows from left to right (default).
