Changed the color system, added status and theme colors

--- a/src/base/_border.scss
+++ b/src/base/_border.scss
@@ -5,14 +5,21 @@
 // Style guide: 1.6.0
 
 
+$border: 1px solid $sy-border-color;
 .sy-border {
-    border: 1px solid $sy-color-primary;
+    border: $border;
 }
 
-@each $hue, $palette in $sy-color {
-    @each $step, $color in $palette {
-        .sy-border-#{$hue}-#{$step} {
-            border-color: $color;
-        }
-    }
+.sy-border-top {
+    border-top: $border;
 }
+.sy-border-right {
+    border-right: $border;
+}
+.sy-border-bottom {
+    border-bottom: $border;
+}
+.sy-border-left {
+    border-left: $border;
+}
+
