--- a/src/util/_color.scss
+++ b/src/util/_color.scss
@@ -1,4 +1,4 @@
-@function sy-generate-color($hue, $modifier: $sy-color-modifier) {
+@function sy-generate-color($name, $hue, $modifier: $sy-color-modifier) {
   $colors: ();
   @each $step, $m in $modifier {
     $h: $hue;
@@ -14,7 +14,7 @@
       $h: 0;
       $s: 0;
     }
-    $colors: map-merge($colors, (#{$step}: hsl($h, $s, $l)));
+    $colors: map-merge($colors, (#{$name}-#{$step}: hsl($h, $s, $l)));
   }
   @return $colors;
 }
@@ -22,16 +22,14 @@
 @function sy-generate-color-palette($hues, $modifier: $sy-color-modifier) {
   $colors: ();
   @each $name, $hue in $hues {
-    $colors: map-merge($colors, (#{$name}: sy-generate-color($hue, $modifier)));
+    $colors: map-merge($colors, sy-generate-color($name, $hue, $modifier));
   }
   @return $colors;
 }
 
-@function sy-color($name, $step: '500', $map: $sy-color) {
-  @if map-has-key($map, $name) {
-    @if map-has-key(map-get($map, $name), $step) {
-      @return map-get(map-get($map, $name), $step);
-    }
+@function sy-color($name) {
+  @if map-has-key($sy-color-all, $name) {
+    @return map-get($sy-color-all, $name);
   }
-  @return '#000';
+  @return #000;
 }
