--- a/src/base/_grid.scss
+++ b/src/base/_grid.scss
@@ -52,13 +52,13 @@
 // Markup:
 // <div class="sy-row">
 //   <div class="sy-col">
-//     <p class="sy-blue-500">Column A</p>
+//     <p class="sy-primary">Column A</p>
 //   </div>
 //   <div class="sy-col">
-//     <p class="sy-blue-500">Column B</p>
+//     <p class="sy-primary">Column B</p>
 //   </div>
 //   <div class="sy-col">
-//     <p class="sy-blue-500">Column C</p>
+//     <p class="sy-primary">Column C</p>
 //   </div>
 // </div>
 // 
