--- a/src/base/_layout.scss
+++ b/src/base/_layout.scss
@@ -24,9 +24,9 @@
 // `0` (smallest) up to `5` (biggest).
 //
 // Markup:
-// <p class="sy-mx-0 sy-mb-5 sy-blue-500 sy-text-mono">sy-mx-0 sy-mb-5</p>
-// <p class="sy-mx-5 sy-blue-500 sy-text-mono">sy-mx-5</p>
-// <p class="sy-mx-0 sy-mt-5 sy-blue-500 sy-text-mono">sy-mx-0 sy-mt-5</p>
+// <p class="sy-mx-0 sy-mb-5 sy-primary sy-text-mono">sy-mx-0 sy-mb-5</p>
+// <p class="sy-mx-5 sy-primary sy-text-mono">sy-mx-5</p>
+// <p class="sy-mx-0 sy-mt-5 sy-primary sy-text-mono">sy-mx-0 sy-mt-5</p>
 //
 // Style guide: 1.3.1
 
@@ -64,9 +64,9 @@
 // `0` (smallest) up to `5` (biggest).
 //
 // Markup:
-// <p class="sy-px-0 sy-pb-3 sy-blue-500 sy-text-mono">sy-px-0 sy-pb-3</p>
-// <p class="sy-px-5 sy-blue-500 sy-text-mono">sy-px-5</p>
-// <p class="sy-px-0 sy-pt-3 sy-blue-500 sy-text-mono">sy-px-0 sy-pt-3</p>
+// <p class="sy-px-0 sy-pb-3 sy-primary sy-text-mono">sy-px-0 sy-pb-3</p>
+// <p class="sy-px-5 sy-primary sy-text-mono">sy-px-5</p>
+// <p class="sy-px-0 sy-pt-3 sy-primary sy-text-mono">sy-px-0 sy-pt-3</p>
 //
 // Style guide: 1.3.2
 
@@ -104,12 +104,12 @@
 // `0` (smallest) up to `5` (biggest).
 //
 // Markup:
-// <div class="sy-w-0 sy-h-3 sy-m-3 sy-float-left sy-blue-500"></div>
-// <div class="sy-w-1 sy-h-3 sy-m-3 sy-float-left sy-blue-500"></div>
-// <div class="sy-w-2 sy-h-3 sy-m-3 sy-float-left sy-blue-500"></div>
-// <div class="sy-w-3 sy-h-3 sy-m-3 sy-float-left sy-blue-500"></div>
-// <div class="sy-w-4 sy-h-3 sy-m-3 sy-float-left sy-blue-500"></div>
-// <div class="sy-w-5 sy-h-3 sy-m-3 sy-float-left sy-blue-500"></div>
+// <div class="sy-w-0 sy-h-3 sy-m-3 sy-float-left sy-primary"></div>
+// <div class="sy-w-1 sy-h-3 sy-m-3 sy-float-left sy-primary"></div>
+// <div class="sy-w-2 sy-h-3 sy-m-3 sy-float-left sy-primary"></div>
+// <div class="sy-w-3 sy-h-3 sy-m-3 sy-float-left sy-primary"></div>
+// <div class="sy-w-4 sy-h-3 sy-m-3 sy-float-left sy-primary"></div>
+// <div class="sy-w-5 sy-h-3 sy-m-3 sy-float-left sy-primary"></div>
 //
 // Style guide: 1.3.3
 
@@ -127,12 +127,12 @@
 // `0` (smallest) up to `5` (biggest).
 //
 // Markup:
-// <div class="sy-w-3 sy-h-0 sy-m-3 sy-float-left sy-blue-500"></div>
-// <div class="sy-w-3 sy-h-1 sy-m-3 sy-float-left sy-blue-500"></div>
-// <div class="sy-w-3 sy-h-2 sy-m-3 sy-float-left sy-blue-500"></div>
-// <div class="sy-w-3 sy-h-3 sy-m-3 sy-float-left sy-blue-500"></div>
-// <div class="sy-w-3 sy-h-4 sy-m-3 sy-float-left sy-blue-500"></div>
-// <div class="sy-w-3 sy-h-5 sy-m-3 sy-float-left sy-blue-500"></div>
+// <div class="sy-w-3 sy-h-0 sy-m-3 sy-float-left sy-primary"></div>
+// <div class="sy-w-3 sy-h-1 sy-m-3 sy-float-left sy-primary"></div>
+// <div class="sy-w-3 sy-h-2 sy-m-3 sy-float-left sy-primary"></div>
+// <div class="sy-w-3 sy-h-3 sy-m-3 sy-float-left sy-primary"></div>
+// <div class="sy-w-3 sy-h-4 sy-m-3 sy-float-left sy-primary"></div>
+// <div class="sy-w-3 sy-h-5 sy-m-3 sy-float-left sy-primary"></div>
 //
 // Style guide: 1.3.4
 
@@ -151,8 +151,8 @@
 // `none`, `left`, `right` or `inherit`.
 //
 // Markup:
-// <div class="sy-float-left sy-w-3 sy-h-3 sy-blue-500"></div>
-// <div class="sy-float-right sy-w-3 sy-h-3 sy-red-500"></div>
+// <div class="sy-float-left sy-w-3 sy-h-3 sy-primary"></div>
+// <div class="sy-float-right sy-w-3 sy-h-3 sy-secondary"></div>
 //
 // Style guide: 1.3.5
 
